# sil_host

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build.bat  conanfile.py  main.cpp
conf/: build.yml
